--- a/htdocs/views/base.html.twig
+++ b/htdocs/views/base.html.twig
@@ -22,6 +22,18 @@
 <div class="container_24">
 <div class="grid_5" id="left">
 		<div class='name' id='h'><a href='/'>Joe Baldwin</a></div>
+            <div>
+         
+            <a target="_blank" href="http://twitter.com/thejoebaldwin"><img src="/images/Twitter-icon.png"></a>
+            <a target="_blank" href="http://www.facebook.com/pages/Humboldt-Technology-Group-LLC/89789096791?ref=ts"><img src="/images/FaceBook-icon.png"></a>
+            <a href="http://www.linkedin.com/in/thejoebaldwin" target="_blank"><img src="/images/linkedin_32.png"></a>
+            <a href="https://plus.google.com/104911077712616064231/posts#104911077712616064231/posts" target="_blank"><img src="/images/google-plus.png"></a><br/>
+            <a href="http://www.youtube.com/baldwinjoe1" target="_blank"><img src="/images/youtube.png"></a>
+            <a href="http://itunes.apple.com/us/artist/humboldt-technology-group/id427924873" target="_blank"><img src="/images/apps_32.png"></a>
+            <a href="http://github.com/thejoebaldwin" alt="Github"><img src="/images/git_32.png"></a>
+         
+      
+</div>
   		       <ul>  
 		           {%    for tag in tags  %}
               <li><a href='/tag/{{tag}}'>{{tag}}</a></li>
@@ -29,23 +41,50 @@
 		      </ul>  </div>
   <!-- end .grid_5 -->
   <div class="grid_19" class='text-align:left;' >
+       <div class="grid_19" style='text-align:right;'  >
+           {% set current_index = previous_index + 1 %}
+           {% set range_index = current_index - 5 %}
+            {% if current_index < 0 %}
+                {% set current_index = 0 %}
+           {% endif %}
+           {% if range_index < 0 %}
+                {% set range_index = 0 %}
+           {% endif %}
+            {% for i in range_index..(range_index + 10) %}
+               {% if i <= 22 %}
+                  {% if i == current_index %}
+                      <div class="grid_1"  style='text-align:center;border-style:solid;border-color:red;border-width:1px;'>
+                  {% else %}
+                      <div class="grid_1"  style='text-align:center;background-color:red;color:white;'>
+                  {% endif %}
+                  {%  if action != '/' %}
+                          <a href='/{{ action }}/{% if i > 0%}{{ i }}{% endif %}'>{{ i }}</a>
+                  {% else  %}
+                          <a href='/{% if i > 0%}{{ i }}{% endif %}'>{{ i + 1 }}</a>
+                  {%  endif  %}
+                     </div>
+              {% endif %}
+           {% endfor %}
+      </div>
        {% block content %}
         <div id="content">
             Content of the page...
         </div>
       {% endblock %}
+
     </div>
+  
   <!-- end .grid_19 -->
   <div class="clear"></div>
 </div>
 
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
- 
 
+    
 
 
   <footer>
-
+     
   </footer>
  <script type="text/javascript"> 
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
