--- a/htdocs/views/main/content.html.twig
+++ b/htdocs/views/main/content.html.twig
@@ -1,16 +1,8 @@
 {% extends "base.html.twig" %}
-
 {% block content %}
  <div id="content" class="content">
-     <div>
         <h1>{{ post.title }}</h1>
         {{ html|raw }}
-        <div>
-          {%    for tag in post.tags  %}
-              <a href='/tag/{{tag}}'>{{tag}}</a> |
-          {% endfor %}
-        </div>
-     </div>
+        {% include 'tags.html.twig' %}      
  </div> 
-
 {% endblock %}
