--- a/htdocs/views/main/content.html.twig
+++ b/htdocs/views/main/content.html.twig
@@ -3,6 +3,6 @@
  <div id="content" class="content">
         <h1>{{ post.title }}</h1>
         {{ html|raw }}
-        {% include 'tags.html.twig' %}      
+        tags:{% for tag in post.tags  %}<a href='/tag/{{tag}}'>{{tag}}</a>{% if not loop.last %},{% endif %}{% endfor %}
  </div> 
 {% endblock %}
