--- a/htdocs/views/main/index.html.twig
+++ b/htdocs/views/main/index.html.twig
@@ -7,7 +7,7 @@
      <div id="content">
    		 <h1><a href='/post/{{  post.path }}'>{{ post.title }}</a></h1>
    		    			{{ post.contents | raw}}
-                        {% include 'tags.html.twig' %}
+                        tags:{% for tag in post.tags  %}<a href='/tag/{{tag}}'>{{tag}}</a>{% if not loop.last %},{% endif %}{% endfor %}
      </div>
  
  {% endfor %}
