--- a/htdocs/views/posts.json.twig
+++ b/htdocs/views/posts.json.twig
@@ -2,10 +2,10 @@
    "posts": [
       {%    for post in posts  %}
             {
-            "title": "{{ post.path }}",
-            "published": "blerg",
+            "title": "{{ post.title }}",
+            "created":"{{ post.created| date('Y-m-d H:i:s') }}",
             "contents": "{{ post.contents | raw}}",
-            "permalink": "http: //frankensteinosaur.us/post/{{ post.path }}"
+            "permalink": "http://frankensteinosaur.us/post/{{ post.path }}"
             }
             {% if not loop.last %},{% endif %}
       {% endfor %}
