--- a/htdocs/views/main/index.html.twig
+++ b/htdocs/views/main/index.html.twig
@@ -7,6 +7,7 @@
      <div id="content">
    		 <h1><a href='/post/{{  post.path }}'>{{ post.title }}</a></h1>
    		    			{{ post.contents | raw}}
+                         <div style="color:black;font-size: small;"> published: {{ post.created |  date("m/d/y h:m") }}{% set hour = post.created |  date("H") %}{% if hour > 12 %}pm{% else %}am{% endif %}</div>
                         tags:{% for tag in post.tags  %}<a href='/tag/{{tag}}'>{{tag}}</a>{% if not loop.last %},{% endif %}{% endfor %}
      </div>
  
