cleaning up posts

--- a/htdocs/views/base.html.twig
+++ b/htdocs/views/base.html.twig
@@ -56,7 +56,7 @@
             <a href="http://github.com/thejoebaldwin" alt="Github"><img src="/images/git_32.png"></a>
         </div>
       
-            <iframe height="70px" width="150px" scrolling="no" src='http://sterts.humboldttechgroup.com/thejoebaldwin/last'></iframe>
+            <iframe height="70px" width="150px" scrolling="no" src='http://sterts.es/thejoebaldwin/last'></iframe>
             
       
         <div style='text-align:right;margin-top:10px;margin-bottom:5px;'>
